--- a/readings.tex
+++ b/readings.tex
@@ -26,62 +26,119 @@
 	Ha-shata hacha –
 	l’shata d’atya b’ar’ah d’yisra’el
 	Ha-shata avdei –
-	l’shata d’atya b’nei chorin}
+	l’shata d’atya b’nei chorin.}
 
 \newcommand{\HaLachmaEng}{%
 	This is the bread of affliction our ancestors ate in the land of Egypt. Let all who are hungry come and eat; let all who are in need come and share our Passover. This year here, next year in the land of Israel; this year oppressed, next year free.}
 %
-\newcommand{\MaNishtanaHeb}{}
-\newcommand{\MaNishtanaHebi}{\largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין חָמֵץ וּמַצָּה, הַלַּיְלָה הַזֶּה – כֻּלּוֹ מַצָּה?}}
-\newcommand{\MaNishtanaHebii}{\largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין שְׁאָר יְרָקוֹת – הַלַּיְלָה הַזֶּה (כֻּלּוֹ) מָרוֹר?}}
-\newcommand{\MaNishtanaHebiii}{\largehebrew{שֶׁבְּכָל הַלֵּילוֹת אֵין אָנוּ מַטְבִּילִין אֲפִילוּ פַּעַם אֶחָת – הַלַּיְלָה הַזֶּה שְׁתֵּי פְעָמִים?}}
-\newcommand{\MaNishtanaHebiv}{\largehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין בֵּין יוֹשְׁבִין וּבֵין מְסֻבִּין – הַלַּיְלָה הַזֶּה כֻּלָּנוּ מְסֻבִּין?}}
+\newcommand{\MaNishtanaHeb}{\hugehebrew{מַה נִּשְׁתַּנָּה הַלַּיְלָה הַזֶּה מִכָּל הַלֵּילוֹת?}}
+\newcommand{\MaNishtanaHebi}{\hugehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין חָמֵץ וּמַצָּה ...}\\}
+\newcommand{\MaNishtanaHebib}{\hugehebrew{...הַלַּיְלָה הַזֶּה כֻּלּוֹ מַצָּה?}}
 %
-\newcommand{\MaNishtanaTlit}{%
-	Mah nishtanah ha-lailah ha-zeh mi-kol ha-leilot!}
-\newcommand{\MaNishtanaTliti}{She-b’chol ha-leilot anu ochlin chameitz u-matzah, ha-lailah ha-zeh kulo matzah?}
-\newcommand{\MaNishtanaTlitii}{She-b’chol ha-leilot anu ochlin sh’ar y’rakot, ha-lailah ha-zeh maror?}
-\newcommand{\MaNishtanaTlitiii}{She-b’chol ha-leilot ein anu matbilin afilu pa’am achat, ha-lailah ha-zeh sh’teif’amim?}
-\newcommand{\MaNishtanaTlitiv}{She-b’chol ha-leilot anu ochlin bein yoshvin u-vein m’subin, ha-lailah ha-zeh kullanu m’subin?}
+\newcommand{\MaNishtanaHebii}{\hugehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין שְׁאָר יְרָקוֹת ...\\}}
+\newcommand{\MaNishtanaHebiib}{\hugehebrew{...הַלַּיְלָה הַזֶּה (כֻּלּוֹ) מָרוֹר?}}
 %
-\newcommand{\MaNishtanaEng}{%
-	How different this night is from all other nights!}
-\newcommand{\MaNishtanaEngi}{On all other nights we eat either leavened or unleavened bread…why only unleavened bread tonight?}
-\newcommand{\MaNishtanaEngii}{On all other nights we eat different types of herbs and vegetables…why bitter herbs tonight?}
-\newcommand{\MaNishtanaEngiii}{On all other nights we do not even dip once…why do we dip twice tonight?}
-\newcommand{\MaNishtanaEngiv}{On all other nights we eat either sitting or leaning…why do we all lean tonight?}
+\newcommand{\MaNishtanaHebiii}{\hugehebrew{שֶׁבְּכָל הַלֵּילוֹת אֵין אָנוּ מַטְבִּילִין אֲפִילוּ פַּעַם אֶחָת ...\\}}
+\newcommand{\MaNishtanaHebiiib}{\hugehebrew{...הַלַּיְלָה הַזֶּה שְׁתֵּי פְעָמִים?}}
+%
+\newcommand{\MaNishtanaHebiv}{\hugehebrew{שֶׁבְּכָל הַלֵּילוֹת אָנוּ אוֹכְלִין בֵּין יוֹשְׁבִין וּבֵין מְסֻבִּין ...\\}}
+\newcommand{\MaNishtanaHebivb}{\hugehebrew{...הַלַּיְלָה הַזֶּה כֻּלָּנוּ מְסֻבִּין?}}
+%
+\newcommand{\MaNishtanaTlit}{Mah nishtanah ha-lailah ha-zeh mi-kol ha-leilot!}
+\newcommand{\MaNishtanaTliti}{She-b’chol ha-leilot anu ochlin chameitz u-matzah}
+\newcommand{\MaNishtanaTlitib}{ha-lailah ha-zeh kulo matzah?}
+\newcommand{\MaNishtanaTlitii}{She-b’chol ha-leilot anu ochlin sh’ar y’rakot}
+\newcommand{\MaNishtanaTlitiib}{ha-lailah ha-zeh maror?}
+\newcommand{\MaNishtanaTlitiii}{She-b’chol ha-leilot ein anu matbilin afilu pa’am achat}
+\newcommand{\MaNishtanaTlitiiib}{ha-lailah ha-zeh sh’teif’amim?}
+\newcommand{\MaNishtanaTlitiv}{She-b’chol ha-leilot anu ochlin bein yoshvin u-vein m’subin}
+\newcommand{\MaNishtanaTlitivb}{ha-lailah ha-zeh kullanu m’subin?}
+%
+\newcommand{\MaNishtanaEng}{How different this night is from all other nights!}
+\newcommand{\MaNishtanaEngi}{On all other nights we eat either leavened or unleavened bread}
+\newcommand{\MaNishtanaEngib}{why only unleavened bread tonight?}
+\newcommand{\MaNishtanaEngii}{On all other nights we eat different types of herbs and vegetables}
+\newcommand{\MaNishtanaEngiib}{why bitter herbs tonight?}
+\newcommand{\MaNishtanaEngiii}{On all other nights we do not even dip once}
+\newcommand{\MaNishtanaEngiiib}{why do we dip twice tonight?}
+\newcommand{\MaNishtanaEngiv}{On all other nights we eat either sitting or leaning}
+\newcommand{\MaNishtanaEngivb}{why do we all lean tonight?}
 %
 \newcommand{\MaNishtanaCz}{%
 	Co odlišuje tuto noc ode všech ostatních nocí?}
-\newcommand{\MaNishtanaCzi}{Proč každé jiné noci jíme jak kvašený, tak nekvašený chléb, a tuto noc jenom nekvašený?}
-\newcommand{\MaNishtanaCzii}{Proč každé jiné noci jíme všechnu zeleninu, ale dnešní noci pouze hořkou?}
-\newcommand{\MaNishtanaCziii}{Proč každé jiné noci ani jednou nenamáčíme do slané vody, a této noci dvakrát?}
-\newcommand{\MaNishtanaCziv}{Proč každé jiné noci jíme vsedě ale teto noci jíme vleže?}
+\newcommand{\MaNishtanaCzi}{Proč každé jiné noci jíme jak kvašený, tak nekvašený chléb...}
+\newcommand{\MaNishtanaCzib}{a tuto noc jenom nekvašený?}
+\newcommand{\MaNishtanaCzii}{Proč každé jiné noci jíme všechnu zeleninu...}
+\newcommand{\MaNishtanaCziib}{ale dnešní noci pouze hořkou?}
+\newcommand{\MaNishtanaCziii}{Proč každé jiné noci ani jednou nenamáčíme do slané vody...}
+\newcommand{\MaNishtanaCziiib}{a této noci dvakrát?}
+\newcommand{\MaNishtanaCziv}{Proč každé jiné noci jíme vsedě....}
+\newcommand{\MaNishtanaCzivb}{ale teto noci jíme vleže?}
 %
-\newcommand{\MaNishtanaAnswerCz}{A byli jsme  Egyptě faraonovými otroky, ale Hospodin, náš Bůh, nás odtamtud vyvedl pevnou rukou a vztaženou paží, velkou hrůzou, znameními a zázraky. A kdyby Svatý, buď požehnán, nevyvedl naše předky z Egypta, byli bychom dodnes my a naše děti a děti našich dětí faraonem zotročeni v Egyptě.}
-\newcommand{\MaNishtanaAnswerEng}{We do these things to remember that we were slaves in Egypt, but the Lord our G-d brought us out from that place with a strong hand and an outstretched arm, with great terrors, signs and wonders. And if the Holy One, blessed be He, had not brought our ancestors out of Egypt, we and our children and our children's children would still be enslaved in Egypt by Pharoah.}
-
-\newcommand{\FourChildrenText}{
-	The Talmud describes four types of children at the Pesach table, and how to respond to them
-		\begin{enumerate}
-		\item \raggedright{The wise child, who asks: What are the testimonies and laws which God commanded you?} \\
-		\raggedleft{\textit{\textcolor{darkblue}{...and should be taught the rules of the holiday.}}}
-		\item \raggedright{The wicked child, who removes himself from the question and asks: What does this service mean to you individually?} \\
-		\raggedleft\textit{\textcolor{darkblue}{ ...and should be taught about community and put in his place}}
-		\item \raggedright{The simple child who asks, What is this about?} \\
-		\raggedleft\textit{\textcolor{darkblue}{...and should be told of G-d's mighty deliverance plainly}}
-		\item \raggedright\textit{The child who doesn’t know how to ask a question...}\\
-		\raggedleft{\textcolor{darkblue}{...who should be aided and told the story}}
-		\end{enumerate}
-}
+\newcommand{\MaNishtanaAnswerCz}{Děláme tyto věci, abychom si pamatovali, že byli jsme Egyptě faraonovými otroky, ale Hospodin, náš Bůh, nás odtamtud vyvedl pevnou rukou a vztaženou paží, velkou hrůzou, znameními a zázraky. A kdyby Svatý, buď požehnán, nevyvedl naše předky z Egypta, byli bychom dodnes my a naše děti a děti našich dětí faraonem zotročeni v Egyptě.}
+\newcommand{\MaNishtanaAnswerEng}{We do these things to remember how we were slaves in Egypt, but that G-d brought us out from that place with a strong hand and an outstretched arm, with great terrors, signs and wonders. And if He had not brought our ancestors out of Egypt, we and our children and their children would still be enslaved in Egypt by Pharoah.}
+%
+%english four children
+%
+\newcommand{\childi}{The wise child, who asks:}
+\newcommand{\childiq}{ What are the testimonies and laws which God commanded you?}
+\newcommand{\childia}{...and should be taught the rules of the holiday.}
+%
+\newcommand{\childii}{The wicked child, who sarcastically asks:}
+\newcommand{\childiiq}{What relevance does this service have to you of all people?}
+\newcommand{\childiia}{...and should be taught about community and put in his place.}
+%
+\newcommand{\childiii}{The simple child who asks:}
+\newcommand{\childiiiq}{What is this about?}
+\newcommand{\childiiia}{...and should be told of G-d's mighty deliverance plainly.}
+%
+\newcommand{\childiv}{The child who doesn’t know how to ask a question...}
+\newcommand{\childiva}{...who should be aided and told the story.}
+%
+%czech four children
+%NEEDS FIXING
+\newcommand{\childicz}{Moudré dítě, které se ptá:}
+\newcommand{\childiqcz}{Jaká jsou svědectví a zákony, které vám Bůh přikázal?}
+\newcommand{\childiacz}{...a měli byste ho naučit pravidla dovolené.}
+%
+\newcommand{\childiicz}{Zlé dítě, které se sarkasticky ptá:}
+\newcommand{\childiiqcz}{Jaký moderní význam pro vás tato služba vůbec má?}
+\newcommand{\childiiacz}{a měl by být poučen o komunitě a usadit někoho.}
+%
+\newcommand{\childiiicz}{Jednoduché dítě které se ptá:}
+\newcommand{\childiiiqcz}{O co tady jde?}
+\newcommand{\childiiiacz}{...a mělo by se mu jasně říci o mocném osvobození Boha.}
+%
+\newcommand{\childivcz}{Dítě, které neví, jak se zeptat...}
+\newcommand{\childivacz}{...kdo by měl dostat pomoc a vyprávět příběh.}
+%
 %
 \newcommand{\MaggidText}{%
-	Insert Passage or poem for story. When speaking of gds promise to abraham raise the cup and say the promisetoast, 10 plagues, cup 2, dayyeinu, r.gamliel’s 3 things
-}
+	{\color{midblue} G-d made many promises to Abraham:\\
+		\color{black} Bůh zaslíbil Abrahamovi
+		\vspace*{2ex}
+		\\ \largehebrew{הַבֶּט־נָא הַשָּׁמַיְמָה וּסְפֹר הַכּוֹכָבִים אִם־תּוּכַל לִסְפֹּר אֹתָם וַיֹּאמֶר לוֹ כֹּה יִהְיֶה זַרְעֶךָ}\\
+		\raggedleft \color{midblue} Look toward heaven and count the stars, if you are able to count them. \\ So shall your offspring be.\\
+		{\centering \textit{\color{black} Genesis 15:5}\\}
+		\color{black} 
+		\vspace*{4ex}
+		\largehebrew{אֲנִי יְהֹוָה אֲשֶׁר הוֹצֵאתִיךָ מֵאוּר כַּשְׂדִּים לָתֶת לְךָ אֶת־הָאָרֶץ הַזֹּאת לְרִשְׁתָּהּ}\\
+		\color{midblue} I brought you out from Ur to assign this land to you as a possession.\\
+		{\centering \textit{\color{black} Genesis 15:7}\\}
+		\color{black}
+		\vspace*{4ex}
+		\largehebrew{יִהְיֶה זַרְעֲךָ בְּאֶרֶץ לֹא לָהֶם וַעֲבָדוּם וְעִנּוּ אֹתָם אַרְבַּע מֵאוֹת שָׁנָה...}	\\
+		\color{midblue} Your offspring shall be strangers in a foreign land, \\ and they shall be enslaved and oppressed four hundred years; \\
+		\color{black} \vspace*{1ex}
+		\raggedright \largehebrew{...וְגַם אֶת־הַגּוֹי אֲשֶׁר יַעֲבֹדוּ דָּן אָנֹכִי וְאַחֲרֵי־כֵן יֵצְאוּ בִּרְכֻשׁ גָּדוֹל}\\
+		\color{midblue} but I will execute judgment on the nation they shall serve, \\ and in the end they shall go free with great wealth.\\
+		{\hspace*{0.375\textwidth} \textit{\color{black} Genesis 15: 13-14}}
+		}}
 
-\newcommand{\PromiseToast}
-{V’hi she-amda l’avoteinu v’lanu.\\
-	This promise has sustained our ancestors and us.}
+\newcommand{\PromiseToastTlit}{V’hi she-amda l’avoteinu v’lanu.}
+\newcommand{\PromiseToastEng}{This promise has sustained our ancestors and us.}
+\newcommand{\PromiseToastHeb}{\hugehebrew{וְהִיא שֶׁעָמְדָה לַאֲבוֹתֵינוּ וְלָנוּ.}}
+\newcommand{\PromiseToastCz}{Tento slib podporoval naše předky a udržuje nás.}
 	
 \newcommand{\PlaguesTextEng}{
 	\centering
@@ -175,13 +232,7 @@
 	\vspace*{2.3mm}	
 }
 
-\newcommand{\DayyeinuIntro}{
-	\vspace*{2ex}
-	\begin{center}
-		{\large Dayyeinu}
-		\end{center}
-	\vspace*{2ex}
-	
+\newcommand{\DayyeinuIntro}{	
 	How many times do we forget to pause and notice that where we are? Dayyeinu reminds us about all the blessings and miracles already in our lives. When we experience difficult times, we look forward to future joys but also actively reflect on existing reasons we have for gratitude, a reason to say \textit{“Dayyeinu”}.\par
 	\vspace*{2ex}
 	 
@@ -197,200 +248,208 @@
 		\vspace*{2ex}
 		%1
 		\item {
-		\raggedright{If He had brought us out from Egypt...\\
-			\textit{Ilu hotzianu mimitzrayim...}\\
+		\raggedright{\color{midblue}If He had brought us out from Egypt...\\
+			\textit{\color{darkblue}Ilu hotzianu mimitzrayim...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ הוֹצִיאָנוּ מִמִּצְרָיִם...}\\}
-		\raggedleft{...and not carried out judgments against the Egyptians...\\
-			\textit{...v'lo asah bahem sh'fatim...}\\
-			\largehebrew{וְלֹא עָשָׂה בָּהֶם שְׁפָטִים...}\\}
+			\largehebrew{\color{darkblue} אִלּוּ הוֹצִיאָנוּ מִמִּצְרָיִם...}\\}
+		\raggedleft{\color{midblue}...and not carried out judgments against the Egyptians...\\
+			\textit{\color{darkblue}...v'lo asah bahem sh'fatim...}\\
+			\largehebrew{\color{darkblue} וְלֹא עָשָׂה בָּהֶם שְׁפָטִים...}\\}
 		\DayyeinuRepeat \vspace*{2ex}
 		}
 		%2
 		\item{
-		\raggedright{If He had carried out judgments against them...\\
-			\textit{Ilu asah bahem sh'fatim...}\\
+		\raggedright{\color{midblue} If He had carried out judgments against them...\\
+			\textit{\color{darkblue} Ilu asah bahem sh'fatim...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ עָשָׂה בָּהֶם שְׁפָטִים...}\\}
-		\raggedleft{...and not against their idols...\\
-			\textit{...v'lo asah beloheihem...}\\
+			\largehebrew{\color{darkblue} אִלּוּ עָשָׂה בָּהֶם שְׁפָטִים...}\\}
+		\raggedleft{\color{midblue}...and not against their idols...\\
+			\textit{\color{darkblue}...v'lo asah beloheihem...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא עָשָׂה בֵּאלֹהֵיהֶם...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא עָשָׂה בֵּאלֹהֵיהֶם...}\\}
 		\DayyeinuRepeat \vspace*{2ex}
 		}
 		%3
 		\item 
-		{\raggedright{If He had destroyed their idols...\\
-			\textit{Ilu asah beloheihem...}\\
+		{\raggedright{\color{midblue}If He had destroyed their idols...\\
+			\textit{\color{darkblue}Ilu asah beloheihem...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ עָשָׂה בֵּאלֹהֵיהֶם...}\\}
-		\raggedleft{...and not smitten their first-born...\\
-			\textit{...v'lo harag et b'choreihem...}\\
+			\largehebrew{\color{darkblue} אִלּוּ עָשָׂה בֵּאלֹהֵיהֶם...}\\}
+		\raggedleft{\color{midblue}...and not smitten their first-born...\\
+			\textit{\color{darkblue}...v'lo harag et b'choreihem...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא הָרַג אֶת בְּכוֹרֵיהֶם...}\\}	
+			\largehebrew{\color{darkblue}...וְלֹא הָרַג אֶת בְּכוֹרֵיהֶם...}\\}	
 		\DayyeinuRepeat	\vspace*{2ex}
 		}
 		%4
 		\item{
-		\raggedright{If He had smitten their first-born...\\
-			\textit{Ilu harag et b'choreihem...}\\
+		\raggedright{\color{midblue}If He had smitten their first-born...\\
+			\textit{\color{darkblue}Ilu harag et b'choreihem...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ הָרַג אֶת בְּכוֹרֵיהֶם...}\\}
-		\raggedleft{...and not given us their wealth...\\		
-			\textit{...v'lo natan lanu et mamonam...}\\
+			\largehebrew{\color{darkblue} אִלּוּ הָרַג אֶת בְּכוֹרֵיהֶם...}\\}
+		\raggedleft{\color{midblue}...and not given us their wealth...\\		
+			\textit{\color{darkblue}...v'lo natan lanu et mamonam...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא נָתַן לָנוּ אֶת מָמוֹנָם...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא נָתַן לָנוּ אֶת מָמוֹנָם...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}
 		%5
 		\item{
-		\raggedright{If He had given us their wealth...\\
-			\textit{Ilu natan lanu et mamonam...}\\
+		\raggedright{\color{midblue}If He had given us their wealth...\\
+			\textit{\color{darkblue}Ilu natan lanu et mamonam...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ נָתַן לָנוּ אֶת מָמוֹנָם...}\\}
-		\raggedleft{...and not split the sea for us...\\
-			\textit{...v'lo kara lanu et hayam...}\\
+			\largehebrew{\color{darkblue}אִלּוּ נָתַן לָנוּ אֶת מָמוֹנָם...}\\}
+		\raggedleft{\color{midblue}...and not split the sea for us...\\
+			\textit{\color{darkblue}...v'lo kara lanu et hayam...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...ןלא קָרַע לָנוּ אֶת הַיָּם...}\\}
+			\largehebrew{\color{darkblue}...ןלא קָרַע לָנוּ אֶת הַיָּם...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}	
 		%6
 		\item{
-		\raggedright{If He had split the sea for us...\\
-			\textit{Ilu kara lanu et hayam...}\\
+		\raggedright{\color{midblue}If He had split the sea for us...\\
+			\textit{\color{darkblue}Ilu kara lanu et hayam...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ קָרַע לָנוּ אֶת הַיָּם...}\\}
-		\raggedleft{...and not taken us through it on dry land...\\
-			\textit{...v'lo he'eviranu b'tocho becharavah...}\\
+			\largehebrew{\color{darkblue}אִלּוּ קָרַע לָנוּ אֶת הַיָּם...}\\}
+		\raggedleft{\color{midblue}...and not taken us through it on dry land...\\
+			\textit{\color{darkblue}...v'lo he'eviranu b'tocho becharavah...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}
 		%7
 		\item{
-		\raggedright{If He had taken us through the sea on dry land...\\
-			\textit{Ilu he'eviranu b'tocho becharavah...}\\
+		\raggedright{\color{midblue}If He had taken us through the sea on dry land...\\
+			\textit{\color{darkblue}Ilu he'eviranu b'tocho becharavah...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
-		\raggedleft{...and not drowned our oppressors in it...\\
-			\textit{...v'lo shika tzareinu b'tocho...}\\
+			\largehebrew{\color{darkblue}אִלּוּ הֶעֱבִירָנוּ בְּתוֹכוֹ בֶּחָרָבָה...}\\}
+		\raggedleft{\color{midblue}...and not drowned our oppressors in it...\\
+			\textit{\color{darkblue}...v'lo shika tzareinu b'tocho...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}
 		%8		
 		\item{
-		\raggedright{If He had drowned our oppressors in it...\\
-			\textit{Ilu shika tzareinu b'tocho...}\\
+		\raggedright{\color{midblue}If He had drowned our oppressors in it...\\
+			\textit{\color{darkblue}Ilu shika tzareinu b'tocho...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
-		\raggedleft{...and not cared for us in the desert for 40 years...\\
-			\textit{...v'lo sipeik tzorkeinu bamidbar arba'im shana...}\\
+			\largehebrew{\color{darkblue}אִלּוּ שִׁקַע צָרֵינוּ בְּתוֹכוֹ...}\\}
+		\raggedleft{\color{darkblue}...and not cared for us in the desert for 40 years...\\
+			\textit{\color{darkblue}...v'lo sipeik tzorkeinu bamidbar arba'im shana...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא סִפֵּק צָרַכֵּנוּ בַּמִּדְבָּר אַרְבָּעִים שָׁנָה...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא סִפֵּק צָרַכֵּנוּ בַּמִּדְבָּר אַרְבָּעִים שָׁנָה...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}	
 		%9	
 		\item{
-		\raggedright{If He had cared for us in the desert for 40 years...\\
-			\textit{Ilu sipeik tzorkeinu bamidbar arba'im shana...}\\
+		\raggedright{\color{midblue}If He had cared for us in the desert for 40 years...\\
+			\textit{\color{darkblue}Ilu sipeik tzorkeinu bamidbar arba'im shana...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ סִפֵּק צָרַכֵּנוּ בַּמִּדְבָּר אַרְבָּעִים שָׁנָה...}\\}
-		\raggedleft{...and not fed us the manna...\\
-			\textit{...v'lo he'echilanu et haman...}\\
+			\largehebrew{\color{darkblue}אִלּוּ סִפֵּק צָרַכֵּנוּ בַּמִּדְבָּר אַרְבָּעִים שָׁנָה...}\\}
+		\raggedleft{\color{midblue}...and not fed us the manna...\\
+			\textit{\color{darkblue}...v'lo he'echilanu et haman...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא הֶאֱכִילָנוּ אֶת הַמָּן...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא הֶאֱכִילָנוּ אֶת הַמָּן...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}
 		%10		
 		\item{
-		\raggedright{If He had fed us the manna...\\
-			\textit{Ilu he'echilanu et haman...}\\
+		\raggedright{\color{midblue}If He had fed us the manna...\\
+			\textit{\color{darkblue}Ilu he'echilanu et haman...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ הֶאֱכִילָנוּ אֶת הַמָּן...}\\}
-		\raggedleft{...and not given us the Shabbat...\\
-			\textit{...v'lo natan lanu et hashabbat...}\\
+			\largehebrew{\color{darkblue}אִלּוּ הֶאֱכִילָנוּ אֶת הַמָּן...}\\}
+		\raggedleft{\color{midblue}...and not given us the Shabbat...\\
+			\textit{\color{darkblue}...v'lo natan lanu et hashabbat...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא נָתַן לָנוּ אֶת הַשַּׁבָּת...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא נָתַן לָנוּ אֶת הַשַּׁבָּת...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}	
 		%11
 		\item{
-		\raggedright{If He had given us the Shabbat...\\
-			\textit{Ilu natan lanu et hashabbat...}\\
+		\raggedright{\color{midblue}If He had given us the Shabbat...\\
+			\textit{\color{darkblue}Ilu natan lanu et hashabbat...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ נָתַן לָנוּ אֶת הַשַּׁבָּת...}\\}
-		\raggedleft{...and not brought us before Mount Sinai...\\
-			\textit{...v'lo keirvanu lifnei har sinai...}\\
+			\largehebrew{\color{darkblue}אִלּוּ נָתַן לָנוּ אֶת הַשַּׁבָּת...}\\}
+		\raggedleft{\color{midblue}...and not brought us before Mount Sinai...\\
+			\textit{\color{darkblue}...v'lo keirvanu lifnei har sinai...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}
 		%12	
 		\item{ 
-		\raggedright{If He had brought us before Mount Sinai...\\
-			\textit{Ilu keirvanu lifnei har sinai...}\\
+		\raggedright{\color{midblue}If He had brought us before Mount Sinai...\\
+			\textit{\color{darkblue}Ilu keirvanu lifnei har sinai...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
-		\raggedleft{...and not given us the Torah...\\
-			\textit{...v'lo natan lanu et hatorah...}\\
+			\largehebrew{\color{darkblue}אִלּוּ קֵרְבָנוּ לִפְנֵי הַר סִינַי...}\\}
+		\raggedleft{\color{midblue}...and not given us the Torah...\\
+			\textit{\color{darkblue}...v'lo natan lanu et hatorah...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא נָתַן לָנוּ אֶת הַתּוֹרָה...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא נָתַן לָנוּ אֶת הַתּוֹרָה...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}	
 		%13
 		\item{
-		\raggedright{If He had given us the Torah...\\
-			\textit{Ilu natan lanu et hatorah...}\\
+		\raggedright{\color{midblue}If He had given us the Torah...\\
+			\textit{\color{darkblue}Ilu natan lanu et hatorah...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ נָתַן לָנוּ אֶת הַתּוֹרָה...}\\}
+			\largehebrew{\color{darkblue}אִלּוּ נָתַן לָנוּ אֶת הַתּוֹרָה...}\\}
 		\raggedleft{...and not brought us into the land of Israel...\\
-			\textit{...v'lo hichnisanu l'eretz yisra'eil...}\\
+			\textit{\color{darkblue}...v'lo hichnisanu l'eretz yisra'eil...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
+			\largehebrew{\color{darkblue}...וְלֹא הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
 		\DayyeinuRepeat	\vspace*{2ex}
 		}
 		%14
 		\item{
-		\raggedright{If He had brought us into the land of Israel...\\
-			\textit{Ilu hichnisanu l'eretz yisra'eil...}\\
+		\raggedright{\color{midblue}If He had brought us into the land of Israel...\\
+			\textit{\color{darkblue}Ilu hichnisanu l'eretz yisra'eil...}\\
 			\vspace*{0.25ex}
-			\largehebrew{אִלּוּ הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
-		\raggedleft{...and not built for us the Holy Temple...\\
-			\textit{...v'lo vanah lanu et beit hamikdash...}\\
+			\largehebrew{\color{darkblue}אִלּוּ הִכְנִיסָנוּ לְאֶרֶץ יִשְׂרָאֵל...}\\}
+		\raggedleft{\color{midblue}...and not built for us the Holy Temple...\\
+			\textit{\color{darkblue}...v'lo vanah lanu et beit hamikdash...}\\
 			\vspace*{0.25ex}
-			\largehebrew{...וְלֹא בָּנָה לָנוּ אֶת בֵּית הַמִּקְדָּשׁ...}\\}
-		\DayyeinuRepeat	\vspace*{2ex}
-		}	
-	\end{enumerate}
-	Danielle and Misha Slutsky, https://www.recustom.com/clips/4063687.
+			\largehebrew{\color{darkblue}...וְלֹא בָּנָה לָנוּ אֶת בֵּית הַמִּקְדָּשׁ...}\\}
+		\DayyeinuRepeat}	
+	\end{enumerate} %Danielle and Misha Slutsky, https://www.recustom.com/clips/4063687.
 }
 
-\newcommand{\RabbiGamliel}
-{Rabbi Gamliel instructs us to take note of the following. Do you know what they symbolise?
-	Shank Bone : the temple sacrifice of a spotless lamb each year to commemorate the lamb whose blood was painted on the doorways of the israelites in Egypt, so that Gd would know not to slay any firstborn within that home
-	Matzah : the meal the israelites ate before they left egypt included bread made without leavening, because they were leaving too soon to wait for bread to rise.
-	Maror : the pungent flavour reminds us of the equally bitter prison of slavery the israelites endured.
+\newcommand{\RabbiGamliel}{Rabbi Gamliel instructs us to take note of the following:\\
+	\vspace*{2ex}
+	\columnratio{0.3}
+	\begin{paracol}{2}
+	\noindent{\large Shank Bone} : \vspace*{8mm} \switchcolumn \raggedright We recall the temple sacrifice, which itself commemorated the lamb's blood painted on the doorways of the Israelites in Egypt, which saved the firstborn Hebrew boys from death. \switchcolumn 
+	\vspace*{5mm}\hspace*{6mm}{\large Matzah} :  \vspace*{4mm} \switchcolumn \raggedright We recall the meal the Israelites ate before they left Egypt included bread made without leavening, because they were leaving too soon to wait for bread to rise. \switchcolumn 
+	\vspace*{5mm} \hspace*{6mm}{\large Maror} :  \vspace*{4mm}\switchcolumn \raggedright the pungent flavour reminds us of the equally bitter prison of slavery the israelites endured. \\
+\end{paracol}
 }
+
 \newcommand{\EveryGenerationText}{
-\largehebrew{בכ לָּ־דוֹּ ר ודָּ ֹור חיַּבְָּּ אָּ דָּ ם לר ִ אֹות אֶּ ת־עַ צמ ֹו, כּאִ לו ּהוּא יצָּאְָּּ מִ מִ צר ָּ ְַֽיִ םְּ}\\
-\textit{B’chol dor vador chayav adam lirot et-atzmo, k’ilu hu yatzav mimitzrayim.}
+\largehebrew{בְּכָל-דּוֹר וָדוֹר חַיָּב אָדָם לִרְאוֹת אֶת-עַצְמוֹ כְּאִלּוּ הוּא יָצָא מִמִּצְרַיִם}
+\vspace*{1mm}\\
+\textit{B’chol dor vador chayav adam lirot et-atzmo, k’ilu hu yatzav mimitzrayim.}\\
 \vspace*{2ex}
-In every generation, everyone must to see themselves as though they personally left Egypt.
+	\begin{multicols}{2}
+	\nopagebreak \color{black} \raggedright {large V každém pokolení je povinností každého Žida vidět sama sebe, jako 
+		by on sám vyšel z Egypta,} jak je řečeno: „Tohoto dne pověz svému synu, 
+	aby říkal: Jelikož tohle učinil Hospodin mně při mém východu z Egypta.“ 
+	Bože náš, jemuž žehnáme, nevykoupil pouze naše předky, ale s nimi 
+	vykoupil také nás, jak je řečeno; „I nás vyvedl odtamtud, aby nás přivedl 
+	a dal nám tu zemi, jak přísahal našim otcům.“
+	
+	\columnbreak 
+	\raggedright In every generation, everyone must to see themselves as though they personally left Egypt. As it is said: “Tell your son this day, that he may say, ‘Because the Lord did this to me when I came out of Egypt.’ Our God, whom we bless, not only redeemed our ancestors, but also redeemed us with them, as it is said; “And he brought us up from there, that he might bring us in 
+	and give us the land, as he swore to our fathers.”
+\end{multicols}
 \vspace*{2ex}
-V každém pokolení je povinností každého Žida vidět sama sebe, jako 
-by on sám vyšel z Egypta, jak je řečeno: „Tohoto dne pověz svému synu, 
-aby říkal: Jelikož tohle učinil Hospodin mně při mém východu z Egypta.“ 
-Bože náš, jemuž žehnáme, nevykoupil pouze naše předky, ale s nimi 
-vykoupil také nás, jak je řečeno; „I nás vyvedl odtamtud, aby nás přivedl 
-a dal nám tu zemi, jak přísahal našim otcům.“ 
-
 }
 
 \newcommand{\KoreichText}{
-	During temple times, the lamb sacrifice would be eaten at a festive meal for Pesach. In those times the great sage Hillel made a tradition of sandwiching meat, maror and matzah together. We no longer have lamb because we no longer have the temple, but now we make a sandwich using matzah, maror, and anything else you'd like to include. Think about the significance of each part as you construct and eat them
+	\color{midblue}During temple times, the lamb sacrifice would be eaten at a festive meal for Pesach. In those times the great sage Hillel made a tradition of sandwiching meat, Maror and Matzah together. We no longer have lamb because we no longer have the temple, but now we make a sandwich using Matzah, Maror, Chazeret and anything else you'd like to include. \\
+	Think about the significance of each part as you construct and eat them.\\
 	\vspace*{2ex}
-	\textit{Hilel v době, kdy Chrám existoval, dělával toto - skládal dohromady maces a trpké byliny a pojídal je zároveň.}}
+	\color{black} \textit{Hilel v době, kdy Chrám existoval, dělával toto - skládal dohromady maces a trpké byliny a pojídal je zároveň.}}
 	
 
 
@@ -404,37 +463,51 @@ a dal nám tu zemi, jak přísahal našim otcům.“
 \newcommand{\HallelHeb}{
 	\begin{center}
 		%\textdir TRT
-		\largehebrew{\Large הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַֽלְלוּ הַ֥לְלוּ־יָ֨הּ}\\
-		\largehebrew{\LARGE  כֹּ֣ל הַ֭נְּשָׁמָה תְּהַלֵּ֥ל יָ֗הּ הַֽלְלוּ־יָֽהּ הַ֥לְלוּ־יָ֨הּ}
+		\largehebrew{\LARGE הַלְלוּ הַלְלוּ הַלְלוּ הַלְלוּ הַלְלוּ הַלְלוּ־יָהּ}\\
+		\largehebrew{\LARGE  כֹּל הַנְּשָׁמָה תְּהַלֵּל יָהּ הַלְלוּ־יָהּ הַלְלוּ־יָהּ}
 	\end{center}
 	\vspace*{2ex}
 }
 
-\newcommand{\ElijahText}{\textit{Pour Elijah's cup of wine.\\
-		We go and open the door and call three times:}
-	'Eliyahu! Eliyahu! Eliyahu!' \par
-	\textit{to welcome Elijah, protector of souls and herald of the messianic age of peace, into our festival. If there is a neighbour, friend, or stranger who answers the cry, we welcome them with a blessing and a hot meal, because at the heart of the Pesach message is an awareness of our own ancestors' hardship which should spill forth in our kindness to each other and to strangers today:}}
+\newcommand{\ElijahText}{
+	\color{midblue} \textit{\centering Pour Elijah's cup of wine.\\
+		We go and open the door and call three times:}\\
+	\centering 'Eliyahu! Eliyahu! Eliyahu!'\\
+	\textit{to welcome Elijah, protector of souls and herald of the messianic age of peace, into our festival. \\ If there is a neighbour, friend, or stranger who answers the cry, we welcome them with a blessing and a hot meal, because at the heart of the Pesach message is an awareness of our own ancestors' hardship which should spill forth in our kindness to each other and to strangers today:}}
 	
 \newcommand{\StrangersText}{
-וְגֵ֖ר לֹ֣א תִלְחָ֑ץ וְאַתֶּ֗ם יְדַעְתֶּם֙ אֶת־נֶ֣פֶשׁ הַגֵּ֔ר כִּֽי־גֵרִ֥ים הֱיִיתֶ֖ם בְּאֶ֥רֶץ מִצְרָֽיִם׃
-Exodus 23:9
-You shall not oppress a stranger, for you know the feelings of the stranger, having yourselves been strangers in the land of Egypt.}
+	\color{black} \hugehebrew{וְגֵר לֹא תִלְחָץ וְאַתֶּם יְדַעְתֶּם אֶת־נֶפֶשׁ הַגֵּר כִּי־גֵרִים הֱיִיתֶם בְּאֶרֶץ מִצְרָיִם}\\
+	\vspace*{2ex} \color{midblue} You shall not oppress a stranger, for you know the feelings of the stranger, having yourselves been strangers in the land of Egypt.\\
+	\raggedleft Exodus 23:9
+}
 
-\newcommand{\EliahuHaNavi}{
-	
-	r.
-	אֵ ליִ ּה ָּ ו ּהַ נּבָּ יִ א, אֵ ליִ ּה ָּ וְּ ּהַ תִ ש ביִ אֵ ליִ ּה ָּ ו ,ּ אֵ ליִ ּה ָּ ו, ּאֵ ליִ ּה ָּ וְּ ּהַ גּלִ עָּ דִ י
-	במ ִ הֵ רָּ ה בי מ ֵָּ נוְּ יבָּ ֹוא ֵאל יֵנו ּ ע ִם
-	מָּ ש ְִּיחְַּ בןּ ְֶּּ דָּ ודִ עםְִּ מָּ ש ִ יחְַּ בןּ ְֶּּ דָּ ודְִּ
-	Eliyahu hanavi
-	Eliyahu hatishbi
-	Eliyahu, Eliyahu, Eliyahu hagiladi
-	Bimheirah b’yameinu, yavo eileinu
-	Im mashiach ben-David, Im mashiach ben-David
-	Elijah the prophet, the returning, the man of Gilad: return to us speedily,
-	in our days with the messiah, sonof David}
+\newcommand{\EliahuHaNavi}{\color{black}\hugehebrew{\color{black} אֵלִיָּהוּ הַנָּבִיא,
+		 אֵלִיָּהוּ הַתִּשְׁבִּי,
+		 אֵלִיָּהוּ אֵלִיָּהוּ אֵלִיָּהוּ הַגִּלְעָדִי
+	בִּמְהֵרָה בְיָמֵינוּ, יָבֹא אֵלֵינוּ,
+	 עִם מָשִׁיחַ בֶּן דָּוִד, עִם מָשִׁיחַ בֶּן דָּוִד} \\
+	 \raggedright
+	 \vspace*{2ex}
+	 \columnratio{0.5,0.5}
+	 \begin{paracol}{2}
+		Eliyahu hanavi\\
+		Eliyahu hatishbi\\
+		Eliyahu, Eliyahu, Eliyahu hagiladi\\
+		Bimheirah b’yameinu, yavo eileinu\\
+		Im mashiach ben-David, Im mashiach ben-David
+		
+		\switchcolumn 
+		Elijah the prophet\\
+		Elijah the returning\\
+		Elijah, Elijah, Elijah, the man of Gilad\\
+		return to us speedily, in our days \\
+		with the messiah, son of David
+	\end{paracol}
+}
 
-\newcommand{\MiriamReading}{
-Miriam's cup, the water, and the contribution of women in general.}
+\newcommand{\MiriamReading}{We fill a cup of water to honour Miriam, who watched over Moses in his basket on the river and then led the women, singing, out of Egypt. It is said that when she died, the wells dried up, and she was truly as vital to the Israelites as water:\\
+	\centering
+	“If it wasn’t for the righteousness of women of that generation we would not have been redeemed from Egypt” (Babylonian Talmud, Sotah 9b)\\
+We honour the contribution of all women to Am Yisrael, and especially those in the Exodus story such as Tzipporah, Shifrah, Puah, Pharoah's Daughter, Jochabed and Miriam.}
 
 \newcommand{\ChadGayahText}{insert lyrics in multiple languages and maybe other songs}
