--- a/styling.sty
+++ b/styling.sty
@@ -26,12 +26,12 @@
 	\columnratio{0.8}
 	\begin{paracol}{2}
 		\centering{
-			\textcolor{midblue}{...it would have been enough!\\ 
+			\textcolor{black}{...it would have been enough!\\ 
 				\vspace*{1ex}}}
 		\hspace*{20mm}
-		\textit{\textcolor{midblue}{\LARGE ...dayeinu!}}\\ \vspace*{-2ex}
+		\textit{\textcolor{black}{\LARGE ...dayeinu!}}\\ \vspace*{-2ex}
 		\hspace*{28mm}
-		\textcolor{darkblue}{\HUGE\texthebrew{...דַּיֵּנוּ}\\}
+		\textcolor{black}{\HUGE\texthebrew{...דַּיֵּנוּ}\\}
 		\vspace*{1ex}
 		\colseprulecolor{white}
 	\end{paracol}}
@@ -39,12 +39,13 @@
 \newcommand{\bakDayyeinuRepeat}{	
 	\vspace{1ex}
 	\raggedright{
-	\hspace*{20mm}{\textcolor{midblue}{...it would have been enough!\\
+	\hspace*{20mm}{\textcolor{black} ...it would have been enough!\\
 	\hspace*{20mm}\textit{...dayeinu!}\\
 	\vspace*{-4ex}}
-	\hspace*{50mm}\textcolor{darkblue}{\HUGE\texthebrew{...דַּיֵּנוּ}\\}}
+	\hspace*{50mm}\textcolor{black}{\HUGE\texthebrew{...דַּיֵּנוּ}\\}
 \vspace*{1ex}
 }}
 		
 
 \newcommand{\largehebrew}[1]{\LARGE \texthebrew{\shape #1} \normalsize}
+\newcommand{\hugehebrew}[1]{\huge \texthebrew{\shape #1} \normalsize}
